--- a/stylesn.css
+++ b/stylesn.css
@@ -102,3 +102,30 @@ body {
     transform: translateY(-3px);
     box-shadow: 0 6px 12px rgba(0,0,0,0.3);
 }
+.next-top-btn {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+
+    padding: 10px 18px;
+    background: linear-gradient(135deg, #ff97d9, #ff66c4);
+    color: white;
+    font-size: 14px;
+    border: none;
+    border-radius: 12px;
+    cursor: pointer;
+
+    box-shadow: 
+        0 0 8px rgba(255,130,210,0.6),
+        0 0 20px rgba(255,100,190,0.4);
+
+    transition: 0.25s;
+    z-index: 999;
+}
+
+.next-top-btn:hover {
+    transform: translateY(-3px);
+    box-shadow: 
+        0 0 12px rgba(255,160,230,0.9),
+        0 0 28px rgba(255,120,200,0.6);
+}
